tests/covariance/covariance.exp
Error: test.js:2
  2: var b: CovArrayVerbose<number,*> = [];
                                        ^^ empty array literal
  4: y[0] = ""; // error
            ^^ string. This type is incompatible with the bound on type parameter `Y`:
  2: var b: CovArrayVerbose<number,*> = [];
                            ^^^^^^ number

Error: test.js:3
  3: var y: CovArrayVerbose<mixed,*> = b;
                                       ^ CovArrayVerbose. Has some incompatible type argument with
  3: var y: CovArrayVerbose<mixed,*> = b;
            ^^^^^^^^^^^^^^^^^^^^^^^^ CovArrayVerbose
  Type argument `X` is incompatible:
      2: var b: CovArrayVerbose<number,*> = [];
                                ^^^^^^ number. This type is incompatible with
      3: var y: CovArrayVerbose<mixed,*> = b;
                                ^^^^^ mixed

Error: test.js:8
  8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                                  ^^^^^^ CovArrayVerbose. This type is incompatible with the expected return type of
  8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                ^^^^^^^^^^^^^^^^^^^^^^^^ CovArrayVerbose
  Type argument `X` is incompatible:
      7:     x: CovArrayVerbose<E,I>;
                                ^ E. This type is incompatible with
      8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                    ^^^^^ mixed

Error: test.js:13
 13: (nv.x[0]: string); // error
      ^^^^^^^ Cannot cast computed property to string because number [1] is incompatible with string [2].
  References:
   13: (nv.x[0]: string); // error
        ^^^^^^^ [1]: number
   13: (nv.x[0]: string); // error
                 ^^^^^^ [2]: string

Error: test.js:14
 14: (nv.foo()[0]: string); // error
      ^^^^^^^^^^^ Cannot cast computed property to string because number [1] is incompatible with string [2].
  References:
   14: (nv.foo()[0]: string); // error
        ^^^^^^^^^^^ [1]: number
   14: (nv.foo()[0]: string); // error
                     ^^^^^^ [2]: string


Found 5 errors
